版本控制策略完善